@@ -2,6 +2,9 @@ Revision history for Perl extension Module::Build.
 
  - Upgraded to version.pm 0.70. [John Peacock]
 
+ - Removed a couple small constructs in the tests ("use warnings;" and
+   "qw$foo bar$[1]") that caused test failures under perl 5.005.
+
  - Added support for an explicit default value of undef in prompt().
    [Eric Wilhelm]
 
